Little Fixes and Refactoring code